Prevent 'Special' tags from showing up in right click assignemnt menu.

More clean-up in this class is necessary. I don't like how assigned tags
are shown in the assignable tags list.

BUG:446148